Códigos completos con funcionalidades

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             --color-primario: #8b0000;
             --color-secundario: #DC143C;
             --color-acento: #ff4500;
-            --color-texto: #ffd700;
+            --color-texto: #OD76688;
             --color-fondo: #0a0a0a;
             --color-bordes: #DC143C;
             --sombra: 0 4px 15px rgba(255, 0, 0, 0.3);
@@ -82,7 +82,7 @@
 
         body.tema-angelical header {
             background: #000000;
-            border-bottom: 3px solid #ffd700;
+            border-bottom: 3px solid #OD76688;
         }
 
         h1 {
