Códigos completos con funcionalidades

--- a/index.html
+++ b/index.html
@@ -599,6 +599,7 @@
             <div class="info-footer">
                 <p class="eslogan">"Donde los pecados tienen sabor y las virtudes tienen precio"</p>
                 <p class="copyright">© 2023 Sinner's - Todos los derechos reservados</p>
+                <p class="Instagram">https://www.instagram.com/ar_an.a?igsh=YWc4eW1oaW9vM3l5</p>
             </div>
         </footer>
     </div>
