Panel admin completo corregido - Gustavo A. Madero

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         body.tema-angelical header {
             background: #000000;
-            border-bottom: 3px solid #ffd700;
+            border-bottom: 3px solid #c0c0c0;
         }
 
         h1 {
