Códigos completos con funcionalidades

--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
                     sabor: "Café", 
                     precio: 40, 
                     opciones: {
-                        "LECHE": ["Normal", "Deslactosada (+$10)"],
+                        "LECHE": ["Normal(+$10)", "Deslactosada (+$10)"],
                         "ENDULZANTE": ["Azúcar", "Sustituto", "Sin endulzante"]
                     },
                     toppings: [
@@ -930,7 +930,7 @@
                     sabor: "Café descafeinado", 
                     precio: 40, 
                     opciones: {
-                        "LECHE": ["Normal", "Deslactosada (+$10)"],
+                        "LECHE": ["Normal (+$10)", "Deslactosada (+$10)"],
                         "ENDULZANTE": ["Azúcar", "Sustituto", "Sin endulzante"]
                     },
                     toppings: [
